@@ -5,6 +5,7 @@
 ARANGOD="@SBINDIR@/arangod"
 DATABASE="@DATABASEDIR@"
 MODULESPATH="@PKGDATADIR@/js/server/modules;@PKGDATADIR@/js/common/modules"
+STARTUPPATH="@PKGDATADIR@/js"
 SCRIPT="@PKGDATADIR@/js/server/arango-password.js"
 
 if [ "$#" -lt 1 ];  then
@@ -45,13 +46,15 @@ if [ "$#" -lt 2 ];  then
       -c none \
       --database.directory "$DATABASE" \
       --javascript.modules-path "$MODULESPATH" \
+      --javascript.startup-directory "$STARTUPPATH" \
       --javascript.script "$SCRIPT" \
-      --javascript.script-parameter "$USER"
+      --javascript.script-parameter "$USER" 
 else
   $ARANGOD \
       -c none \
       --database.directory "$DATABASE" \
       --javascript.modules-path "$MODULESPATH" \
+      --javascript.startup-directory "$STARTUPPATH" \
       --javascript.script "$SCRIPT" \
       --javascript.script-parameter "$USER" \
       --javascript.script-parameter "$2"
